Nice new icons and better keyword handling for small projects

--- a/src/bundles/en/individuals.properties
+++ b/src/bundles/en/individuals.properties
@@ -1,4 +1,4 @@
-markedIndividualTypeCaps = Humpback Whale
+markedIndividualTypeCaps = Tagged:
 nickname = Nickname
 nicknamer = Nicknamed by
 alternateID = Alternate ID
