More changes from last night: fix Excel and KML export. Update footer statement and graphics. Fixed Image Search URL in web.xml. Added auto-logging of Alternate ID changes to the encounter/individual record. Additional properties were added to commonConfig for use with Excel export.

--- a/src/bundles/en/commonConfiguration.properties
+++ b/src/bundles/en/commonConfiguration.properties
@@ -57,3 +57,15 @@ epsilon=0.01
 sizelim=0.9
 maxTriangleRotation=30
 C=0.99
+
+#Other common properties used for some data export (e.g. Encounter Search Excel export)
+citation=Lastname, Firstname. My species mark-recapture software library. MyURL.
+kingdom=whichKingdom
+phylum=whichPhylum
+class=whichClass
+order=whichOrder
+family=whichFamily
+genus=whichGenus
+species=whichSpecies
+institutionCode=myInstitution
+catalogCode=myCatalog
