--- a/build.xml
+++ b/build.xml
@@ -3,7 +3,7 @@
   <property name="target.dir" value="target"/>
   <property name="war.name" value="shepherd"/>
   <property name="lib.dir" value="temp_jars"/>
-  <property name="project.version" value="1.0"/>
+  <property name="project.version" value="alpha1"/>
 
 
   <path id="classpath">
