--- a/webapps/ROOT/WEB-INF/web.xml
+++ b/webapps/ROOT/WEB-INF/web.xml
@@ -20,7 +20,7 @@
     xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
     version="2.4">
 
-  <display-name>Photo-identification Library</display-name>
+  <display-name>Shepherd Project Framework for Mark-Recapture Studies</display-name>
   <description>
     Photo-identification Library
   </description>
