Any number of small fixes found while testing the Splash catalog migration...

--- a/src/bundles/en/individuals.properties
+++ b/src/bundles/en/individuals.properties
@@ -1,4 +1,4 @@
-markedIndividualTypeCaps = Tagged:
+markedIndividualTypeCaps = Tagged
 nickname = Nickname
 nicknamer = Nicknamed by
 alternateID = Alternate ID
