Further internationalization of encounter.jsp

--- a/src/bundles/en/encounter.properties
+++ b/src/bundles/en/encounter.properties
@@ -47,3 +47,74 @@ action = Action
 uppercaseEdit = Edit
 edit = edit
 editarea = This area contains commands currently available to you or edit commands that you have selected from the right.
+login = If you have an account, you can login here.
+approve_encounter = Approve encounter
+none_assigned = None assigned.
+none_defined = None defined.
+approval_checklist = Approval checklist
+approve = Approve
+setLocationID = Set Location ID
+setAlternateID = Set Alternate ID
+set = set
+setOthersToInform = <font color=\"#990000\">Set others to inform:</font></strong><br> Separate multiple email addresses with a comma.
+matchedBy = Matched by
+unmatchedFirstEncounter = Unmatched first encounter
+visualInspection = Visual inspection
+patternMatch = Pattern match
+add2MarkedIndividual = Add to marked individual
+individual = Individual
+suppressEmail = Suppress e-mail/RSS
+removeFromMarkedIndividual = Remove from marked individual
+remove = Remove
+createMarkedIndividual = Create marked individual
+create = create
+resetGPS = Reset GPS
+noteGPS = <em>Note</em>: Reset to all blanks if unknown.
+north = North
+south = South
+east = East
+west = West
+setGPS = Set GPS
+setLocation = Set Location
+editSubmittedComments = Edit Submitted Comments
+submitEdit = Submit Edit
+editContactInfo = Edit contact information
+name = Name
+address = Address
+phone = Phone
+email = Email
+resetSex = Reset Sex
+male = male
+female = female
+unsure = unsure
+resetStatus = Reset Status
+alive = alive
+dead = dead
+resetEncounterDate = Reset Encounter Date
+day = Day
+month = Month
+year = Year
+hour = Hour
+minutes = Minutes
+setDate = Set Date
+trackingEmails = E-mail addresses currently tracking this encounter
+setIdentifiable = Reset as Identifiable
+moreInfo = More info
+reaccept = Reaccept
+rejectEncounter = Reject Encounter
+resetThumbnail = Reset Thumbnail
+useImage = Use image
+currentValue = Current value is
+change = Change
+editScarring = Edit scarring description
+resetScarring = Reset Scarring
+assignUser = Assign to user
+assign = Assign
+setElevation = Set Elevation
+setDepth = Set Depth
+meters = meters
+setSize = Reset Size
+useZeroIfUnknown = Use 0 if unknown
+directlyMeasured = directly measured
+personalGuess = personal guess
+guessOfGuide = guess of guide/researcher
