Minor wording changes.

--- a/src/bundles/en/encounterSearch.properties
+++ b/src/bundles/en/encounterSearch.properties
@@ -18,7 +18,7 @@ meters = meters
 locationNameContains = Location name contains
 leaveBlank = Leave blank to accept all locations in your search. This field IS NOT case-sensitive.
 locationID = Location ID starts with
-locationIDExample = Leave blank to accept all locations in your search, or fill in the location code digit by digit to narrow the location of your search. Example: Use </em>1a1<em> as the location ID for Northern Ningaloo Marine Park.</em>
+locationIDExample = Leave blank to accept all locations in your search, or fill in the location code digit by digit to narrow the location of your search.</em>
 submitterName = Submitter or photographer name contains
 namesBlank = Leave blank to accept all names in your search. This field IS NOT case-sensitive.
 alternateID = Alternate ID starts with
@@ -31,6 +31,6 @@ generateExportFile = Generate a tab-delimited file of results for export to Exce
 localeExport = Excel: Add locale coordinates for encounters without specific GPS data.
 generateKMLFile = Generate a KML file of results for Google Earth.
 addTimestamp2KML = Add a timestamp to the KML to animate on a timeline.
-generateEmailList = Generate a file listing submitter and photographer emails.
+generateEmailList = Generate a file listing submitter and photographer email addresses.
 none = None
 goSearch = Search Sightings
