--- a/src/bundles/en/searchResults.properties
+++ b/src/bundles/en/searchResults.properties
@@ -22,3 +22,4 @@ matchingEncounters = Matching encounters
 identifiedUnique = identified and unique
 unidentified = unidentified
 dailyDuplicates = daily duplicates
+totalEncounters = Total encounters
