--- a/src/bundles/en/searchResults.properties
+++ b/src/bundles/en/searchResults.properties
@@ -1,7 +1,7 @@
 title = Encounter Search Results
 noGPS = No GPS data is available for mapping.
 mapNote = <em>Note:</em> If you zoom in too quickly, Google Maps may claim that it does not have the needed maps. Zoom back out, wait a few seconds to allow maps to load in the background, and then zoom in again.
-mappedResults = Mapped Results
+mappedResults = Mapped Results (up to first 100 shown)
 totalEncounter = Total encounters in the database
 belowMatches = Below are encounters that matched your search. Click any column heading to sort by that field.
 rightClickLink = Right-click the link and save to your local hard drive.
@@ -15,6 +15,7 @@ locationID = Location ID
 size = Size
 sex = Sex
 markedIndividual = Assignted to
+alternateID = Alternate ID
 unassigned = Unassigned
 seeNextResults = See next results
 seePreviousResults = See previous results
@@ -23,3 +24,4 @@ identifiedUnique = identified and unique
 unidentified = unidentified
 dailyDuplicates = daily duplicates
 totalEncounters = Total encounters
+submitterName = Submitter
