Pushing out eventID and vessel display

--- a/src/bundles/en/searchResults.properties
+++ b/src/bundles/en/searchResults.properties
@@ -25,3 +25,5 @@ unidentified = unidentified
 dailyDuplicates = daily duplicates
 totalEncounters = Total encounters
 submitterName = Submitter
+vessel = Vessel
+eventID = Event ID
