--- a/src/bundles/en/encounter.properties
+++ b/src/bundles/en/encounter.properties
@@ -1,3 +1,4 @@
+encounter = Encounter
 unidentifiable_title = Unidentifiable Encounter Number
 unapproved_title = UNAPPROVED Encounter Number
 title = Encounter Number
