Displaying vessel, behavior, and event ID - but no edit or submit yet

--- a/src/bundles/en/encounter.properties
+++ b/src/bundles/en/encounter.properties
@@ -119,3 +119,6 @@ useZeroIfUnknown = Use 0 if unknown
 directlyMeasured = directly measured
 personalGuess = personal guess
 guessOfGuide = guess of guide/researcher
+vessel = Vessel
+behavior = Behavior
+eventID = Event ID
