--- a/src/bundles/en/commonConfiguration.properties
+++ b/src/bundles/en/commonConfiguration.properties
@@ -22,6 +22,9 @@ GlobalUniqueIdentifierPrefix=MY_CATALOG:MY_SPECIES:
 #wiki location
 wikiLocation=http://localhost:8080/wiki/doku.php?id=
 
+#whether to display and allow adoptions - set to true for yes and false for no
+allowAdoptions = true
+
 #email addresses and parameters
 autoEmailAddress=webmaster@someplace.org
 newSubmissionEmail=submissions@someplace.org
