--- a/src/bundles/en/encounterSearch.properties
+++ b/src/bundles/en/encounterSearch.properties
@@ -19,7 +19,7 @@ locationNameContains = Location name contains
 leaveBlank = Leave blank to accept all locations in your search. This field IS NOT case-sensitive.
 locationID = Location ID starts with
 locationIDExample = Leave blank to accept all locations in your search, or fill in the location code digit by digit to narrow the location of your search.</em>
-submitterName = Submitter or photographer name contains
+submitterName = Submitter or photographer name or email address contains
 namesBlank = Leave blank to accept all names in your search. This field IS NOT case-sensitive.
 alternateID = Alternate ID starts with
 sightingDates = Sighting dates
