Adding keyword filtering to Encounter Search

--- a/src/bundles/en/encounterSearch.properties
+++ b/src/bundles/en/encounterSearch.properties
@@ -33,4 +33,6 @@ generateKMLFile = Generate a KML file of results for Google Earth.
 addTimestamp2KML = Add a timestamp to the KML to animate on a timeline.
 generateEmailList = Generate a file listing submitter and photographer email addresses.
 none = None
+hasKeywordPhotos = <strong>Keywords:</strong> Has photos displaying the keyword(s). Select one or more.
+noKeywords = No keywords defined.
 goSearch = Search Sightings
