SUpporting dual Excel export in encounterSearch.jsp

--- a/src/bundles/en/encounterSearch.properties
+++ b/src/bundles/en/encounterSearch.properties
@@ -27,8 +27,8 @@ day = Day
 month = Month
 year = Year
 range = Range
-generateExportFile = Generate a tab-delimited file of results for export to Excel (only content you have permissions for will be exported).
-localeExport = Excel: Add locale coordinates for encounters without specific GPS data.
+generateExportFile = Generate an Excel file of the filtered results.
+localeExport = Export: Add locale coordinates for encounters without specific GPS data. These values must be set for each location ID in locales.properties.
 generateKMLFile = Generate a KML file of results for Google Earth.
 addTimestamp2KML = Add a timestamp to the KML to animate on a timeline.
 generateEmailList = Generate a file listing submitter and photographer email addresses.
