--- a/src/bundles/en/searchResults.properties
+++ b/src/bundles/en/searchResults.properties
@@ -6,6 +6,7 @@ totalEncounter = Total encounters in the database
 belowMatches = Below are encounters that matched your search. Click any column heading to sort by that field.
 rightClickLink = Right-click the link and save to your local hard drive.
 exportedExcel = Exported Excel spreadsheet (.xls) file
+exportedOBIS = Exported Excel spreadsheet (.xls) file in OBIS format
 exportedKML = Exported Google Earth KML file
 exportedEmail = Exported email data contributors file
 number = Number
