Adding behavior and vessel to encounter search

--- a/src/bundles/en/encounterSearch.properties
+++ b/src/bundles/en/encounterSearch.properties
@@ -27,6 +27,8 @@ day = Day
 month = Month
 year = Year
 range = Range
+vessel = Associated vessel
+behavior = Demonstrates behavior
 generateExportFile = Generate an Excel file of the filtered results.
 localeExport = Export: Add locale coordinates for encounters without specific GPS data. These values must be set for each location ID in locales.properties.
 generateKMLFile = Generate a KML file of results for Google Earth.
