Adding RESTful servlet

--- a/webapps/ROOT/WEB-INF/web.xml
+++ b/webapps/ROOT/WEB-INF/web.xml
@@ -463,6 +463,20 @@
 	<servlet-class>org.ecocean.servlet.MassExposeGBIF</servlet-class>
   </servlet>
   
+      <servlet>
+          <servlet-name>DataNucleus</servlet-name>
+          <servlet-class>org.datanucleus.rest.RestServlet</servlet-class>
+          <init-param>
+              <param-name>persistence-context</param-name>
+              <param-value>transactions-optional</param-value>
+          </init-param>	     
+      </servlet>
+      
+      <servlet-mapping>
+          <servlet-name>DataNucleus</servlet-name>
+          <url-pattern>/dn/*</url-pattern>
+      </servlet-mapping>
+
 
 
   
