--- a/src/bundles/en/thumbnailSearch.properties
+++ b/src/bundles/en/thumbnailSearch.properties
@@ -1,10 +1,10 @@
 title = Thumbnail Search Criteria
-instructions = Select from the criteria below to tailor your search among the images\videos stored in the database.
+instructions = Select from the criteria below to tailor your search among the images\\videos stored in the database.
 types2search = Encounter types to search
 approved = Approved
 unapproved = Unapproved
 unapprovedApproved = Unapproved and approved encounters only
-allEncounters = All encounters (including rejected)
+allEncounters = All encounters (including unidentifiable)
 unidentifiable = Unidentifiable
 sex = Sex is
 male = Male
@@ -32,11 +32,6 @@ year = Year
 range = Range
 vessel = Associated vessel
 behavior = Demonstrates behavior
-generateExportFile = Generate an Excel file of the filtered results.
-localeExport = Export: Add locale coordinates for encounters without specific GPS data. These values must be set for each location ID in locales.properties.
-generateKMLFile = Generate a KML file of results for Google Earth.
-addTimestamp2KML = Add a timestamp to the KML to animate on a timeline.
-generateEmailList = Generate a file listing submitter and photographer email addresses.
 none = None
 hasKeywordPhotos = <strong>Keywords:</strong> Has photos displaying the keyword(s). Select one or more.
 noKeywords = No keywords defined.
