--- a/src/bundles/en/thumbnailSearchResults.properties
+++ b/src/bundles/en/thumbnailSearchResults.properties
@@ -1,4 +1,4 @@
-title = Thumbnail Image\Video Search Results
+title = Thumbnail Image\\Video Search Results
 totalMatches = Matching images\\videos
 belowMatches = Below are images
 thatMatched = that matched your search.
