--- a/src/bundles/en/welcome.properties
+++ b/src/bundles/en/welcome.properties
@@ -1,71 +1,4 @@
-submit_title = Login
-submit_report = Report an encounter
-submit_date = Encounter date
-submit_day = Day
-submit_month = Month
-submit_year = Year
-submit_time = Encounter time
-submit_length = Length
-submit_meters = Meters
-submit_feet = Feet
-submit_unknown = Unknown
-submit_howmeasure = How did you measure this length?
-submit_directlymeasured = directly measured
-submit_personalguess = personal guess
-submit_guessofguide = guess of guide/researcher
-submit_sex = Sex
-submit_male = male
-submit_female = female
-submit_unsure = unsure
-submit_location = Sighting location
-submit_gpslatitude = GPS Latitude
-submit_gpslongitude = GPS Longitude
-submit_north = North
-submit_south = South
-submit_east = East
-submit_west = West
-submit_depth = Water depth at encounter site
-submit_usesameunits = Use the same units (meters or feet) that you selected above
-submit_scars = Noticeable scarring
-submit_none = None
-submit_tail = Tail (caudal) fin
-submit_1stdorsal = 1st dorsal fin
-submit_2nddorsal = 2nd dorsal fin
-submit_leftpec = Left pectoral fin
-submit_rightpec = Right pectoral fin
-submit_head = Head
-submit_body = Body
-submit_comments = Additional comments for identification
-submit_contactinfo = Your contact information
-submit_email = Email
-submit_name = Name
-submit_address = Address
-submit_telephone = Telephone
-submit_contactphoto = Photographer contact information
-submit_ifyou = (if you didn't take these pictures)
-submit_pleaseadd = Please add up to four digital images from this encounter by using the fields below. Image files of type JPEG (.jpg) at full quality and full size are preferred, but any image of type <font face=\"Courier New, Courier, mono\">.jpg</font>, <font face=\"Courier New, Courier, mono\">.jpeg</font>, <font face=\"Courier New, Courier, mono\">.bmp</font>, or <font face=\"Courier New, Courier, mono\">.gif</font> is acceptable. At least one of the images must be a left-side or right-side picture of the shark that displays its natural patterning, as shown to the left. No image can be larger than 2 megabytes.
-submit_image = Image
-submit_send = Send encounter report
-reportit = Report An Encounter NOW!
-language = Select Language
-what_do = Select Language
-read_overview = Introduction
-see_all_encounters = View All Encounters
-see_all_sharks = View All Whales
-log_in = Login
-report_encounter = Report An Encounter
-contact_us = Contact Us
-home = Home
-search = Search
-encounter = Encounters:
-shark = Whales:
-menu = Menu
-last_sightings = Last 10 Encounters
-more = More
-ws_info = Species Information
-contributors = Contributors
-about = About
-forum = Forum
-blog = Blog
-area = Area to photograph
-match = Two matches
+loginSuccess = Login success!
+loggedInAs = Welcome! You are logged in as user
+grantedRole = I am granting you the following role:
+pleaseChoose = Please choose from the menu commands above to start.
