--- a/src/bundles/en/encounter.properties
+++ b/src/bundles/en/encounter.properties
@@ -57,6 +57,7 @@ approve = Approve
 setLocationID = Set Location ID
 setAlternateID = Set Alternate ID
 set = set
+initCapsSet = Set
 setOthersToInform = <font color=\"#990000\">Set others to inform:</font></strong><br> Separate multiple email addresses with a comma.
 matchedBy = Matched by
 unmatchedFirstEncounter = Unmatched first encounter
