Final push of dynamic property-supporting code

--- a/src/bundles/en/encounter.properties
+++ b/src/bundles/en/encounter.properties
@@ -124,3 +124,6 @@ vessel = Vessel
 behavior = Behavior
 eventID = Event ID
 verbatimEventDate = Season
+addDynamicProperty = Add dynamic property
+propertyName = Property Name
+propertyValue = Property Value
