Added the config option to turn off spot pattern recognition

--- a/src/bundles/en/commonConfiguration.properties
+++ b/src/bundles/en/commonConfiguration.properties
@@ -72,3 +72,6 @@ genus=whichGenus
 species=whichSpecies
 institutionCode=myInstitution
 catalogCode=myCatalog
+
+#pattern recognition
+useSpotPatternRecognition=true
