--- a/src/bundles/en/encounter.properties
+++ b/src/bundles/en/encounter.properties
@@ -28,7 +28,7 @@ sex = Sex
 mapping = Mapping
 map_note = <i>Note</i>: If you zoom in too quickly, Google Maps may claim that it does not have the needed maps. Zoom back out, wait a few seconds to allow maps to load in the background, and then zoom in again.
 nomap = No GPS data is available for mapping.
-auto_comments = Automated\Researcher comments</strong> (<em>Text or HTML</em>)
+auto_comments = <strong>Automated\\Researcher comments</strong> (<em>Text or HTML</em>)
 add_comment = Add comment
 images = Images
 click2view = Click any image to view the originally submitted version in your browser.
