--- a/src/bundles/en/commonConfiguration.properties
+++ b/src/bundles/en/commonConfiguration.properties
@@ -81,3 +81,6 @@ allowNicknames=true
 
 #library editing
 isCatalogEditable = true
+
+#TapirLink-related settings
+tapirLinkURL = http://localhost:8080/tapirlink/admin/configurator.php?resource=ShepherdProject
