JDOQL conversion-related change: standardiz on "unknwon" as the default, unassigned state for Encounter and MarkedIndividual objects.

--- a/src/bundles/en/allEncounters.properties
+++ b/src/bundles/en/allEncounters.properties
@@ -2,7 +2,7 @@ individual = Individual
 sex = Sex
 male = male
 female = female
-unsure = unsure
+unsure = unknown
 name = Name
 image = Image
 language = Select Language
