--- a/src/bundles/en/submit.properties
+++ b/src/bundles/en/submit.properties
@@ -18,7 +18,7 @@ submit_guessofguide = guess of guide/researcher
 submit_sex = Sex
 submit_male = male
 submit_female = female
-submit_unsure = unsure
+submit_unsure = unknown
 submit_location = Sighting location
 submit_gpslatitude = GPS Latitude
 submit_gpslongitude = GPS Longitude
