Committing last night's work related to thumbnail image searching

--- a/src/bundles/en/thumbnailSearchResults.properties
+++ b/src/bundles/en/thumbnailSearchResults.properties
@@ -10,3 +10,4 @@ identifiedUnique = identified and unique
 unidentified = unidentified
 dailyDuplicates = daily duplicates
 totalEncounters = Total encounters
+matchingKeywords = Matching keywords:
