Further encounter search refinement

--- a/src/bundles/en/searchResults.properties
+++ b/src/bundles/en/searchResults.properties
@@ -28,3 +28,6 @@ totalEncounters = Total encounters
 submitterName = Submitter
 vessel = Vessel
 eventID = Event ID
+table = Results Table
+matchingImages = Matching Images/Videos
+mappedResults = Mapped Results
