--- a/src/bundles/en/thumbnailSearchResults.properties
+++ b/src/bundles/en/thumbnailSearchResults.properties
@@ -16,3 +16,6 @@ locationID = Location ID
 date = Date
 individualID = Marked individual
 catalogNumber = Encounter number
+table = Results Table
+matchingImages = Matching Images/Videos
+mappedResults = Mapped Results
