Adding the initial gallery functionality

--- a/src/bundles/en/encounter.properties
+++ b/src/bundles/en/encounter.properties
@@ -30,7 +30,7 @@ map_note = <i>Note</i>: If you zoom in too quickly, Google Maps may claim that i
 nomap = No GPS data is available for mapping.
 auto_comments = <strong>Automated\\Researcher comments</strong> (<em>Text or HTML</em>)
 add_comment = Add comment
-images = Images
+images = Images (click to zoom)
 click2view = Click any image to view the originally submitted version in your browser.
 image = Image
 image_commands = Image Commands
