Further properties definition

--- a/src/bundles/en/calendar.properties
+++ b/src/bundles/en/calendar.properties
@@ -1,1 +1,5 @@
 title = Encounter Calendar
+table = Results Table
+matchingImages = Matching Images/Videos
+mappedResults = Mapped Results
+resultsCalendar = Results Calendar
