More encounter search consolidation

--- a/src/bundles/en/mappedSearchResults.properties
+++ b/src/bundles/en/mappedSearchResults.properties
@@ -30,3 +30,4 @@ eventID = Event ID
 table = Results Table
 matchingImages = Matching Images/Videos
 mappedResults = Mapped Results
+resultsCalendar = Results Calendar
