--- a/src/bundles/en/searchResults.properties
+++ b/src/bundles/en/searchResults.properties
@@ -31,3 +31,4 @@ eventID = Event ID
 table = Results Table
 matchingImages = Matching Images/Videos
 mappedResults = Mapped Results
+resultsCalendar = Results Calendar
