--- a/src/bundles/en/thumbnailSearchResults.properties
+++ b/src/bundles/en/thumbnailSearchResults.properties
@@ -19,3 +19,4 @@ catalogNumber = Encounter number
 table = Results Table
 matchingImages = Matching Images/Videos
 mappedResults = Mapped Results
+resultsCalendar = Results Calendar
