--- a/src/bundles/en/encounter.properties
+++ b/src/bundles/en/encounter.properties
@@ -127,3 +127,4 @@ verbatimEventDate = Season
 addDynamicProperty = Add dynamic property
 propertyName = Property Name
 propertyValue = Property Value
+imageMetadata = Image Metadata
