--- a/src/bundles/en/encounterSearch.properties
+++ b/src/bundles/en/encounterSearch.properties
@@ -36,5 +36,6 @@ addTimestamp2KML = Add a timestamp to the KML to animate on a timeline.
 generateEmailList = Generate a file listing submitter and photographer email addresses.
 none = None
 hasKeywordPhotos = <strong>Keywords:</strong> Has photos displaying the keyword(s). Select one or more.
-noKeywords = No keywords defined.
+noKeywords = No keywords defined in database.
+noLocationIDs = No location IDs defined in database.
 goSearch = Search Sightings
