Many, many fixes for encounterSearch optimization and EXIF data exposure

--- a/src/bundles/en/encounter.properties
+++ b/src/bundles/en/encounter.properties
@@ -128,3 +128,4 @@ addDynamicProperty = Add dynamic property
 propertyName = Property Name
 propertyValue = Property Value
 imageMetadata = Image Metadata
+matchingKeywords = Matching keywords:
