--- a/src/bundles/en/encounterSearch.properties
+++ b/src/bundles/en/encounterSearch.properties
@@ -17,7 +17,7 @@ lengthIs = Length is
 meters = meters
 locationNameContains = Location name contains
 leaveBlank = Leave blank to accept all locations in your search. This field IS NOT case-sensitive.
-locationID = Location ID starts with
+locationID = Location ID is
 locationIDExample = Leave blank to accept all locations in your search, or fill in the location code digit by digit to narrow the location of your search.</em>
 submitterName = Submitter or photographer name or email address contains
 namesBlank = Leave blank to accept all names in your search. This field IS NOT case-sensitive.
