--- a/src/bundles/en/thumbnailSearchResults.properties
+++ b/src/bundles/en/thumbnailSearchResults.properties
@@ -20,3 +20,4 @@ table = Results Table
 matchingImages = Matching Images/Videos
 mappedResults = Mapped Results
 resultsCalendar = Results Calendar
+imageMetadata = Image Metadata
