More search changes from last night

--- a/src/bundles/en/encounterSearch.properties
+++ b/src/bundles/en/encounterSearch.properties
@@ -39,3 +39,5 @@ hasKeywordPhotos = <strong>Keywords:</strong> Has photos displaying the keyword(
 noKeywords = No keywords defined in database.
 noLocationIDs = No location IDs defined in database.
 goSearch = Search Sightings
+noVBDs = No verbatim event dates defined
+verbatimEventDate = Verbatim event date
