Committing more of last night's changes related to EXIF data expsoure...

--- a/src/bundles/en/commonConfiguration.properties
+++ b/src/bundles/en/commonConfiguration.properties
@@ -84,3 +84,7 @@ isCatalogEditable = true
 
 #TapirLink-related settings
 tapirLinkURL = http://localhost:8080/tapirlink/admin/configurator.php?resource=ShepherdProject
+
+#show EXIF data
+showEXIF = true
+
