Minor display fixes

--- a/src/bundles/en/mappedSearchResults.properties
+++ b/src/bundles/en/mappedSearchResults.properties
@@ -14,7 +14,7 @@ location = Location
 locationID = Location ID
 size = Size
 sex = Sex
-markedIndividual = Assignted to
+markedIndividual = Assigned to
 alternateID = Alternate ID
 unassigned = Unassigned
 seeNextResults = See next results
@@ -31,3 +31,4 @@ table = Results Table
 matchingImages = Matching Images/Videos
 mappedResults = Mapped Results
 resultsCalendar = Results Calendar
+go2encounter = Go to encounter
