--- a/.classpath
+++ b/.classpath
@@ -61,5 +61,6 @@
 	<classpathentry kind="lib" path="temp_jars/datanucleus-rest-2.0.0-release.jar"/>
 	<classpathentry kind="lib" path="temp_jars/flexjson.jar"/>
 	<classpathentry kind="lib" path="temp_jars/metadata-extractor-2.3.1.jar"/>
+	<classpathentry kind="lib" path="temp_jars/sanselan-0.97-incubator.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
