Reworked the returned query object to include the JDOQL filter string and a future pretty print representation...

--- a/src/bundles/en/searchResults.properties
+++ b/src/bundles/en/searchResults.properties
@@ -32,3 +32,4 @@ table = Results Table
 matchingImages = Matching Images/Videos
 mappedResults = Mapped Results
 resultsCalendar = Results Calendar
+jdoql = JDOQL portion of the query
