Better query exposure for encounter search results

--- a/src/bundles/en/encounter.properties
+++ b/src/bundles/en/encounter.properties
@@ -123,9 +123,10 @@ guessOfGuide = guess of guide/researcher
 vessel = Vessel
 behavior = Behavior
 eventID = Event ID
-verbatimEventDate = Season
+verbatimEventDate = Verbatim Event Date
 addDynamicProperty = Add dynamic property
 propertyName = Property Name
 propertyValue = Property Value
 imageMetadata = Image Metadata
 matchingKeywords = Matching keywords:
+individualID = Marked Individual
