--- a/src/bundles/en/mappedSearchResults.properties
+++ b/src/bundles/en/mappedSearchResults.properties
@@ -32,3 +32,6 @@ matchingImages = Matching Images/Videos
 mappedResults = Mapped Results
 resultsCalendar = Results Calendar
 go2encounter = Go to encounter
+jdoql = JDOQL portion of the query
+prettyPrintResults = Search filter:
+queryDetails = Query Details
