--- a/src/bundles/en/searchResults.properties
+++ b/src/bundles/en/searchResults.properties
@@ -33,3 +33,11 @@ matchingImages = Matching Images/Videos
 mappedResults = Mapped Results
 resultsCalendar = Results Calendar
 jdoql = JDOQL portion of the query
+prettyPrintResults = Search filter:
+queryDetails = Query Details
+verbatimEventDate = Verbatim Event Date
+behavior = Behavior
+nameField = Submitter or photographer name or email address contains
+selectLength = Length
+numResights = Number of resights
+vesselField = Vessel
