--- a/src/bundles/en/thumbnailSearchResults.properties
+++ b/src/bundles/en/thumbnailSearchResults.properties
@@ -21,3 +21,6 @@ matchingImages = Matching Images/Videos
 mappedResults = Mapped Results
 resultsCalendar = Results Calendar
 imageMetadata = Image Metadata
+jdoql = JDOQL portion of the query
+prettyPrintResults = Search filter:
+queryDetails = Query Details
