Fixing Encounter Search capabilities...work done last night...simple checkin

--- a/src/bundles/en/individuals.properties
+++ b/src/bundles/en/individuals.properties
@@ -31,3 +31,11 @@ record = Record
 getRecord = Get record
 allEncounters = View all encounters
 allIndividuals = View all marked individuals
+imageGallery = Image Gallery
+error = Tried to get the thumbnails from shepherd, but I hit an error.
+location  = Location
+locationID = Location ID
+date = Date
+individualID = Marked individual
+catalogNumber = Encounter number
+matchingKeywords = Keywords
