--- a/src/bundles/en/thumbnailSearchResults.properties
+++ b/src/bundles/en/thumbnailSearchResults.properties
@@ -23,4 +23,5 @@ resultsCalendar = Results Calendar
 imageMetadata = Image Metadata
 jdoql = JDOQL portion of the query
 prettyPrintResults = Search filter:
+verbatimEventDate = Verbatim Event Date
 queryDetails = Query Details
