Changes in support of thumbnail library for marked individuals

--- a/src/bundles/en/individualSearchResults.properties
+++ b/src/bundles/en/individualSearchResults.properties
@@ -11,3 +11,5 @@ seePreviousResults = See previous results
 matchingMarkedIndividuals = Matching marked individuals
 numFirstSighted = Number first sighted in the specified period
 totalMarkedIndividuals = Total marked individuals in the database
+table = Results Table
+matchingImages = Matching Images/Videos
