--- a/webapps/ROOT/WEB-INF/web.xml
+++ b/webapps/ROOT/WEB-INF/web.xml
@@ -925,6 +925,7 @@
  <url-pattern>/appadmin/kwResults.jsp</url-pattern>
  <url-pattern>/individualSearch.jsp</url-pattern>
  <url-pattern>/individualSearchResults.jsp</url-pattern>
+  <url-pattern>/individualThumbnailSearchResults.jsp</url-pattern>
  <url-pattern>/encounters/thumbnailSearch.jsp</url-pattern>
  <url-pattern>/encounters/thumbnailSearchResults.jsp</url-pattern>
   <url-pattern>/encounters/encounterSearch.jsp</url-pattern>
