--- a/src/bundles/en/individualSearch.properties
+++ b/src/bundles/en/individualSearch.properties
@@ -21,8 +21,8 @@ lengthIs = Average estimated\\measured length was
 meters = meters
 locationNameContains = Location name contains
 leaveBlank = Leave blank to accept all locations in your search. This field IS NOT case-sensitive.
-locationID = Location ID starts with
-locationIDExample = Leave blank to accept all locations in your search. Fill in the location ID digit by digit to narrow the location of your search. You can specify multiple location IDs separated by a comma to find only those individuals sighted at least once in all.
+locationID = Location ID is (select zero or more):
+locationIDExample = Leave blank to accept all locations in your search. You can select multiple location IDs.
 submitterName = Submitter or photographer name or email address contains
 namesBlank = Leave blank to accept all names in your search. This field IS NOT case-sensitive.
 alternateID = Alternate ID starts with
