Added string for verbatimEventDateSearch for marked individuals

--- a/src/bundles/en/individualSearch.properties
+++ b/src/bundles/en/individualSearch.properties
@@ -33,3 +33,5 @@ year = Year
 range = Range
 none = None
 goSearch = Search
+noVBDs = No verbatim event dates defined
+verbatimEventDate = Verbatim event date
