More individual search results mods

--- a/src/bundles/en/individualSearchResults.properties
+++ b/src/bundles/en/individualSearchResults.properties
@@ -13,3 +13,10 @@ numFirstSighted = Number first sighted in the specified period
 totalMarkedIndividuals = Total marked individuals in the database
 table = Results Table
 matchingImages = Matching Images/Videos
+verbatimEventDate = Verbatim Event Date
+locationID = Location ID
+location = Location
+jdoql = JDOQL portion of the query
+prettyPrintResults = Search filter:
+queryDetails = Query Details
+keywords = Keywords
