More search refinement...

--- a/src/bundles/en/individualSearchResults.properties
+++ b/src/bundles/en/individualSearchResults.properties
@@ -20,3 +20,4 @@ jdoql = JDOQL portion of the query
 prettyPrintResults = Search filter:
 queryDetails = Query Details
 keywords = Keywords
+size = Size
