--- a/src/bundles/en/individualThumbnailSearchResults.properties
+++ b/src/bundles/en/individualThumbnailSearchResults.properties
@@ -27,3 +27,4 @@ jdoql = JDOQL portion of the query
 prettyPrintResults = Search filter:
 verbatimEventDate = Verbatim Event Date
 queryDetails = Query Details
+size = Size
