Removed dragzoom on search results and set autozoom on mappedSearchResults.jsp to narrow down the visual display. Added missing properties to interpret the results.

--- a/src/bundles/en/mappedSearchResults.properties
+++ b/src/bundles/en/mappedSearchResults.properties
@@ -35,3 +35,9 @@ go2encounter = Go to encounter
 jdoql = JDOQL portion of the query
 prettyPrintResults = Search filter:
 queryDetails = Query Details
+verbatimEventDate = Verbatim Event Date
+behavior = Behavior
+nameField = Submitter or photographer name or email address contains
+selectLength = Length
+numResights = Number of resights
+vesselField = Vessel
