--- a/src/bundles/en/thumbnailSearchResults.properties
+++ b/src/bundles/en/thumbnailSearchResults.properties
@@ -23,5 +23,10 @@ resultsCalendar = Results Calendar
 imageMetadata = Image Metadata
 jdoql = JDOQL portion of the query
 prettyPrintResults = Search filter:
-verbatimEventDate = Verbatim Event Date
 queryDetails = Query Details
+verbatimEventDate = Verbatim Event Date
+behavior = Behavior
+nameField = Submitter or photographer name or email address contains
+selectLength = Length
+numResights = Number of resights
+vesselField = Vessel
