--- a/src/bundles/en/encounterSearch.properties
+++ b/src/bundles/en/encounterSearch.properties
@@ -41,3 +41,4 @@ noLocationIDs = No location IDs defined in database.
 goSearch = Search Sightings
 noVBDs = No verbatim event dates defined
 verbatimEventDate = Verbatim event date
+noBehaviors = No behaviors have been defined.
