Further refinement of the Individual Search UI and behavior

--- a/src/bundles/en/individualSearch.properties
+++ b/src/bundles/en/individualSearch.properties
@@ -25,8 +25,8 @@ locationID = Location ID is (select zero or more):
 locationIDExample = Leave blank to accept all locations in your search. You can select multiple location IDs.
 submitterName = Submitter or photographer name or email address contains
 namesBlank = Leave blank to accept all names in your search. This field IS NOT case-sensitive.
-alternateID = Alternate ID starts with
-sightingDates = At least one sighting within these dates:
+alternateID = Alternate ID is or includes
+sightingDates = At least one sighting within these dates
 day = Day
 month = Month
 year = Year
