--- a/src/bundles/en/individualSearchResults.properties
+++ b/src/bundles/en/individualSearchResults.properties
@@ -2,7 +2,6 @@ title = Marked Individual Search Results
 instructions = Below are the marked individuals that matched your search.
 markedIndividual = Individual
 numEncounters = Encounters
-sex = Sex
 maxYearsBetweenResights = Max years between resights
 alternateID = Alternate ID
 firstIdentified = First identified
@@ -21,3 +20,5 @@ prettyPrintResults = Search filter:
 queryDetails = Query Details
 keywords = Keywords
 size = Size
+sex = Sex
+numLocationsSighted = No. Locations Sighted
