Next round of fixes...

--- a/src/bundles/en/individualSearchResults.properties
+++ b/src/bundles/en/individualSearchResults.properties
@@ -3,7 +3,7 @@ instructions = Below are the marked individuals that matched your search.
 markedIndividual = Individual
 numEncounters = Encounters
 maxYearsBetweenResights = Max years between resights
-alternateID = Alternate ID
+alternateID = Alternate ID is or contains
 firstIdentified = First identified
 seeNextResults = See next results
 seePreviousResults = See previous results
@@ -22,3 +22,8 @@ keywords = Keywords
 size = Size
 sex = Sex
 numLocationsSighted = No. Locations Sighted
+behavior = Behavior
+nameField = Submitter or photographer name or email address contains
+selectLength = Length
+numResights = Number of resights
+vesselField = Vessel
