--- a/src/bundles/en/individualThumbnailSearchResults.properties
+++ b/src/bundles/en/individualThumbnailSearchResults.properties
@@ -28,3 +28,10 @@ prettyPrintResults = Search filter:
 verbatimEventDate = Verbatim Event Date
 queryDetails = Query Details
 size = Size
+alternateID = Alternate ID is or contains
+behavior = Behavior
+nameField = Submitter or photographer name or email address contains
+selectLength = Length
+numResights = Number of resights
+vesselField = Vessel
+sex = Sex
