Small UI fixes in the master branch

--- a/src/bundles/en/individualSearch.properties
+++ b/src/bundles/en/individualSearch.properties
@@ -21,7 +21,7 @@ lengthIs = Average estimated\\measured length was
 meters = meters
 locationNameContains = Location name contains
 leaveBlank = Leave blank to accept all locations in your search. This field IS NOT case-sensitive.
-locationID = Location ID is (select zero or more):
+locationID = Location ID is (select zero or more)
 locationIDExample = Leave blank to accept all locations in your search. You can select multiple location IDs.
 submitterName = Submitter or photographer name or email address contains
 namesBlank = Leave blank to accept all names in your search. This field IS NOT case-sensitive.
@@ -35,3 +35,4 @@ none = None
 goSearch = Search
 noVBDs = No verbatim event dates defined
 verbatimEventDate = Verbatim event date
+noLocationIDs = No location IDs have been defined.
