--- a/src/bundles/en/searchResults.properties
+++ b/src/bundles/en/searchResults.properties
@@ -15,7 +15,7 @@ location = Location
 locationID = Location ID
 size = Size
 sex = Sex
-markedIndividual = Assignted to
+markedIndividual = ID
 alternateID = Alternate ID
 unassigned = Unassigned
 seeNextResults = See next results
