Further UI fixes

--- a/src/bundles/en/individuals.properties
+++ b/src/bundles/en/individuals.properties
@@ -33,9 +33,11 @@ allEncounters = View all encounters
 allIndividuals = View all marked individuals
 imageGallery = Image Gallery
 error = Tried to get the thumbnails from shepherd, but I hit an error.
-location  = Location
-locationID = Location ID
 date = Date
 individualID = Marked individual
 catalogNumber = Encounter number
-matchingKeywords = Keywords
+matchingKeywords = Matching keywords:
+location  = Location
+locationID = Location ID
+individualID = ID
+catalogNumber = Encounter number
