Finishing ability to unsubscribe from library via email llink

--- a/src/bundles/en/commonConfiguration.properties
+++ b/src/bundles/en/commonConfiguration.properties
@@ -29,6 +29,7 @@ allowAdoptions = true
 autoEmailAddress=webmaster@someplace.org
 newSubmissionEmail=submissions@someplace.org
 mailHost=localhost
+removeEmailString=Do you want to REMOVE your email address from this database? Click the link below to remove it. You will no longer receive updates on your encounters.
 
 #HTML metadata for each page
 htmlDescription=A text description of your mark-recapture project
